--- a/tippy/Base.lproj/Main.storyboard
+++ b/tippy/Base.lproj/Main.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1217" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" colorMatched="YES" initialViewController="QK9-IK-aH1">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1217" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES" initialViewController="QK9-IK-aH1">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -10,34 +11,33 @@
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController title="Tip View Controller" id="BYZ-38-t0r" customClass="TipViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="wZn-uj-Bvw"/>
+                        <viewControllerLayoutGuide type="bottom" id="ncZ-FP-lSq"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="$0.00" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="vVm-4d-fyG" userLabel="TipLabel">
-                                <frame key="frameInset" minX="190" minY="254" width="90" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$0.00" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vVm-4d-fyG" userLabel="TipLabel">
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Tip" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="O1j-4B-zYs">
-                                <frame key="frameInset" minX="90" minY="254" width="44" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tip" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O1j-4B-zYs">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="44" id="TcV-yo-VgH"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="$0.00" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="utF-G7-vBf" userLabel="TotalLabel">
-                                <frame key="frameInset" minX="190" minY="313" width="90" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Total" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KeL-WL-nM6">
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <segmentedControl opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" id="Tqj-jC-fER">
-                                <frame key="frameInset" minX="54" minY="152" width="267" height="29"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="Tqj-jC-fER">
                                 <segments>
                                     <segment title="18%"/>
                                     <segment title="20%"/>
@@ -47,32 +47,43 @@
                                     <action selector="calculateTip:" destination="BYZ-38-t0r" eventType="valueChanged" id="emG-UD-7Ri"/>
                                 </connections>
                             </segmentedControl>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" id="XaG-f8-cMO">
-                                <frame key="frameInset" minX="183" minY="114" width="97" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XaG-f8-cMO">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="90" id="vDn-6w-0FB"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                 <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
                                 <connections>
                                     <action selector="calculateTip:" destination="BYZ-38-t0r" eventType="editingChanged" id="8mu-F8-D95"/>
                                 </connections>
                             </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bill" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="4ME-SN-Am5">
-                                <frame key="frameInset" minX="90" minY="114" width="23" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Total" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="KeL-WL-nM6">
-                                <frame key="frameInset" minX="90" minY="313" width="44" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$0.00" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="utF-G7-vBf" userLabel="TotalLabel">
+                                <fontDescription key="fontDescription" type="system" pointSize="26"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <gestureRecognizers/>
+                        <constraints>
+                            <constraint firstItem="O1j-4B-zYs" firstAttribute="trailing" secondItem="KeL-WL-nM6" secondAttribute="trailing" id="BYo-Re-gnk"/>
+                            <constraint firstItem="O1j-4B-zYs" firstAttribute="baseline" secondItem="vVm-4d-fyG" secondAttribute="baseline" id="Cml-YM-kLj"/>
+                            <constraint firstItem="utF-G7-vBf" firstAttribute="top" secondItem="vVm-4d-fyG" secondAttribute="bottom" constant="24" id="DjA-M3-puK"/>
+                            <constraint firstItem="Tqj-jC-fER" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="HHf-Jp-8A5"/>
+                            <constraint firstItem="Tqj-jC-fER" firstAttribute="trailing" secondItem="vVm-4d-fyG" secondAttribute="trailing" id="HeY-PS-Rr6"/>
+                            <constraint firstItem="XaG-f8-cMO" firstAttribute="top" secondItem="wZn-uj-Bvw" secondAttribute="bottom" constant="50" id="Nbx-W5-MKG"/>
+                            <constraint firstItem="Tqj-jC-fER" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="38" id="Pjj-ZB-kcK"/>
+                            <constraint firstItem="XaG-f8-cMO" firstAttribute="trailing" secondItem="Tqj-jC-fER" secondAttribute="trailing" id="TCI-NO-INX"/>
+                            <constraint firstItem="KeL-WL-nM6" firstAttribute="top" secondItem="O1j-4B-zYs" secondAttribute="bottom" constant="38" id="Wa5-ew-0SV"/>
+                            <constraint firstItem="ncZ-FP-lSq" firstAttribute="top" secondItem="utF-G7-vBf" secondAttribute="bottom" constant="329" id="XT2-0m-X8F"/>
+                            <constraint firstItem="XaG-f8-cMO" firstAttribute="leading" secondItem="vVm-4d-fyG" secondAttribute="leading" id="abH-Kg-Kg5"/>
+                            <constraint firstItem="vVm-4d-fyG" firstAttribute="trailing" secondItem="utF-G7-vBf" secondAttribute="trailing" id="evq-5Q-Qt0"/>
+                            <constraint firstItem="ncZ-FP-lSq" firstAttribute="top" secondItem="KeL-WL-nM6" secondAttribute="bottom" constant="333" id="fcg-9u-Wbv"/>
+                            <constraint firstItem="Tqj-jC-fER" firstAttribute="leading" secondItem="O1j-4B-zYs" secondAttribute="leading" id="nKg-Sg-cb6"/>
+                            <constraint firstItem="Tqj-jC-fER" firstAttribute="top" secondItem="XaG-f8-cMO" secondAttribute="bottom" constant="8" symbolic="YES" id="pGA-lc-ePa"/>
+                            <constraint firstItem="utF-G7-vBf" firstAttribute="leading" secondItem="KeL-WL-nM6" secondAttribute="trailing" constant="91" id="sgP-0X-jdG"/>
+                            <constraint firstItem="O1j-4B-zYs" firstAttribute="leading" secondItem="KeL-WL-nM6" secondAttribute="leading" id="tLj-QF-seb"/>
+                        </constraints>
                         <connections>
                             <outletCollection property="gestureRecognizers" destination="6V7-zY-Mw4" appends="YES" id="sNf-rV-ULn"/>
                         </connections>
@@ -86,7 +97,6 @@
                     </navigationItem>
                     <connections>
                         <outlet property="billField" destination="XaG-f8-cMO" id="MdP-pY-V0X"/>
-                        <outlet property="billTextLabel" destination="4ME-SN-Am5" id="teI-7S-uyj"/>
                         <outlet property="tipControl" destination="Tqj-jC-fER" id="sYf-fn-2YK"/>
                         <outlet property="tipTextLabel" destination="O1j-4B-zYs" id="a8Z-Tg-mqI"/>
                         <outlet property="tipValueLabel" destination="vVm-4d-fyG" id="564-II-Cv4"/>
@@ -107,18 +117,22 @@
         <scene sceneID="HKM-lp-1iE">
             <objects>
                 <viewController title="Settings View Controller" id="W8V-KH-c28" customClass="SettingsViewController" customModule="tippy" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Cpn-N7-kxi"/>
+                        <viewControllerLayoutGuide type="bottom" id="mxq-h5-D60"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="ZRV-JV-WPa">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Default Tip Percentage" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="EkP-P9-yMq">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Default Tip Percentage" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EkP-P9-yMq">
                                 <frame key="frameInset" minX="36" minY="95" width="176" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" id="AEe-yg-c0D">
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="AEe-yg-c0D">
                                 <frame key="frameInset" minX="20" minY="150" width="267" height="29"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <segments>
