--- a/tippy/Base.lproj/Main.storyboard
+++ b/tippy/Base.lproj/Main.storyboard
@@ -47,7 +47,7 @@
                                     <action selector="calculateTip:" destination="BYZ-38-t0r" eventType="valueChanged" id="emG-UD-7Ri"/>
                                 </connections>
                             </segmentedControl>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="$" textAlignment="center" minimumFontSize="17" id="XaG-f8-cMO">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="$" textAlignment="right" minimumFontSize="17" id="XaG-f8-cMO">
                                 <frame key="frameInset" minX="45.65%" minY="32.37%" width="237" height="80"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" weight="ultraLight" pointSize="60"/>
@@ -73,7 +73,7 @@
                     <navigationItem key="navigationItem" title="Tip Calculator" id="El7-sf-s7z">
                         <barButtonItem key="rightBarButtonItem" title="Settings" id="VT3-lf-fK9">
                             <connections>
-                                <segue destination="W8V-KH-c28" kind="push" id="UeP-Tx-9ry"/>
+                                <segue destination="uSv-qf-ea1" kind="push" id="78G-7W-WHW"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -95,45 +95,6 @@
             </objects>
             <point key="canvasLocation" x="477.5" y="339.5"/>
         </scene>
-        <!--Settings View Controller-->
-        <scene sceneID="HKM-lp-1iE">
-            <objects>
-                <viewController title="Settings View Controller" id="W8V-KH-c28" customClass="SettingsViewController" customModule="tippy" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="ZRV-JV-WPa">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Default Tip Percentage" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="EkP-P9-yMq">
-                                <frame key="frameInset" minX="36" minY="95" width="176" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" id="AEe-yg-c0D">
-                                <frame key="frameInset" minX="20" minY="150" width="267" height="29"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <segments>
-                                    <segment title="18%"/>
-                                    <segment title="20%"/>
-                                    <segment title="25%"/>
-                                </segments>
-                                <connections>
-                                    <action selector="changeDefaultPercentage:" destination="W8V-KH-c28" eventType="valueChanged" id="pS6-DL-1Q1"/>
-                                </connections>
-                            </segmentedControl>
-                        </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="oAj-L3-U1s"/>
-                    <connections>
-                        <outlet property="tipControl" destination="AEe-yg-c0D" id="GbC-Pq-SYS"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="DGD-V0-mqg" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="910" y="335"/>
-        </scene>
         <!--Navigation Controller-->
         <scene sceneID="9pi-yD-gfo">
             <objects>
@@ -151,6 +112,81 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XMD-bI-k0a" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-54" y="340"/>
+        </scene>
+        <!--Settings View Controller-->
+        <scene sceneID="QGW-Dm-VqB">
+            <objects>
+                <tableViewController id="uSv-qf-ea1" customClass="SettingsViewController" customModule="tippy" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="fJO-Gk-81L">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <sections>
+                            <tableViewSection headerTitle="Default tip percentage" id="gQp-Vy-SGf">
+                                <cells>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="2fz-Cs-ZBJ">
+                                        <rect key="frame" x="0.0" y="86" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="2fz-Cs-ZBJ" id="IwZ-4q-Lad">
+                                            <frame key="frameInset" width="375" height="44"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" id="E4I-Jw-FIx">
+                                                    <frame key="frameInset" minX="7" minY="7" height="29" maxX="8"/>
+                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                                    <segments>
+                                                        <segment title="18%"/>
+                                                        <segment title="20%"/>
+                                                        <segment title="25%"/>
+                                                    </segments>
+                                                    <connections>
+                                                        <action selector="defaultTipChange:" destination="uSv-qf-ea1" eventType="valueChanged" id="f2t-Rf-SME"/>
+                                                    </connections>
+                                                </segmentedControl>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="6fV-FQ-of6">
+                                        <rect key="frame" x="0.0" y="130" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="6fV-FQ-of6" id="5Aw-QX-Sqz">
+                                            <frame key="frameInset" width="375" height="44"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" id="C4g-JE-e3v">
+                                                    <frame key="frameInset" minY="5" width="50" height="31" maxX="7"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
+                                                    <connections>
+                                                        <action selector="themeSelectToggle:" destination="uSv-qf-ea1" eventType="valueChanged" id="j3H-0s-C3w"/>
+                                                    </connections>
+                                                </switch>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Theme A/B" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="zUy-Ew-YU9">
+                                                    <frame key="frameInset" minX="8" minY="11" width="215" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                        </sections>
+                        <connections>
+                            <outlet property="dataSource" destination="uSv-qf-ea1" id="Vow-y2-glv"/>
+                            <outlet property="delegate" destination="uSv-qf-ea1" id="0Eu-j2-wKo"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="avT-kK-m8r"/>
+                    <connections>
+                        <outlet property="themeSelectSwitch" destination="C4g-JE-e3v" id="Kmf-aV-RkI"/>
+                        <outlet property="tipPercent" destination="E4I-Jw-FIx" id="H3o-Lt-QQV"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Sdq-1g-4py" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1027" y="331"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
